# eng-tools

./: .gitignore  Cargo.toml  INTEGRATION_SUMMARY.md  README.md
apps/tf-cli/: Cargo.toml
apps/tf-cli/src/: main.rs
crates/eng/: Cargo.toml
crates/eng-core/: Cargo.toml
crates/eng-core/src/: ids.rs  lib.rs  numeric.rs
crates/eng-core/src/units/: equation.rs  error.rs  mod.rs  parser.rs  quantity.rs  typed.rs
crates/eng-core/tests/: qty_consistency.rs
crates/eng-pyext/: Cargo.toml
crates/eng-pyext/src/: lib.rs
crates/eng/docs_snippets/: context_solve.rs  device_pipe_loss_colebrook_direct.rs  device_pipe_loss_colebrook_fluid.rs  device_pipe_loss_fixed.rs  family_variant_access.rs  fluid_property_lookup.rs  fluid_saturation_metadata.rs  fluid_state_constructors.rs  material_property_lookup.rs  qty_macro_input.rs  runtime_string_input.rs  simple_equation_solve.rs  top_level_import.rs  typed_unit_input.rs
crates/eng/examples/: unified_usage.rs
crates/eng/src/: architecture.rs  bindings.rs  docs.rs  invoke.rs  lib.rs
crates/eng/src/devices/: conical_shock.rs  fanno_flow.rs  framework.rs  isentropic.rs  mod.rs  normal_shock.rs  nozzle_flow.rs  oblique_shock.rs  pipe_loss.rs  rayleigh.rs
crates/eng/src/solve/: mod.rs  numeric.rs  ode.rs  study.rs  workflow.rs
crates/eng/tests/: bindings_generation.rs  core_docs_examples.rs  device_pipe_loss.rs  docs_exports.rs  invoke_protocol.rs  mdbook_links.rs  solve_layer.rs  study_layer.rs  worker_runtime.rs
crates/equations/: Cargo.toml  build.rs
crates/equations/constants/: constants.yaml
crates/equations/examples/: equation_examples.rs  registry_usage.rs
crates/equations/examples/authoring/: area_mach_verbose_branches.yaml  hoop_stress_minimal.yaml  hoop_stress_typical.yaml  hoop_stress_verbose.yaml
crates/equations/families/: ideal_gas.yaml
crates/equations/registry/compressible/: area_mach.yaml  choked_mass_flux.yaml  fanno_density_ratio.yaml  fanno_friction_parameter.yaml  fanno_pressure_ratio.yaml  fanno_stagnation_pressure_ratio.yaml  fanno_temperature_ratio.yaml  fanno_velocity_ratio.yaml  isentropic_density_ratio.yaml  isentropic_pressure_ratio.yaml  isentropic_temperature_ratio.yaml  mach_angle.yaml  normal_shock_density_ratio.yaml  normal_shock_m2.yaml  normal_shock_pressure_ratio.yaml  normal_shock_stagnation_pressure_ratio.yaml  normal_shock_temperature_ratio.yaml  oblique_shock_m2.yaml  oblique_shock_mn1.yaml  oblique_shock_theta_beta_m.yaml  prandtl_meyer.yaml  rayleigh_density_ratio.yaml  rayleigh_pressure_ratio.yaml  rayleigh_stagnation_pressure_ratio.yaml  rayleigh_stagnation_temperature_ratio.yaml  rayleigh_temperature_ratio.yaml  rayleigh_velocity_ratio.yaml
crates/equations/registry/fluids/: circular_pipe_area.yaml  colebrook.yaml  continuity_mass_flow.yaml  darcy_weisbach_pressure_drop.yaml  orifice_mass_flow_incompressible.yaml  reynolds_number.yaml
crates/equations/registry/heat_transfer/: conduction_plane_wall_heat_rate.yaml  convection_heat_rate.yaml  log_mean_temperature_difference.yaml  thermal_resistance_conduction.yaml  thermal_resistance_convection.yaml
crates/equations/registry/rockets/: cstar_ideal.yaml  specific_impulse_ideal.yaml  thrust_coefficient_ideal.yaml  (+1 more)
crates/equations/schemas/: equation.schema.json
crates/equations/scripts/: check-ci.ps1
crates/equations/src/: api.rs  api_context.rs  defaults.rs  equation_families.rs  error.rs  facade.rs  lib.rs  normalize.rs  tests.rs
crates/equations/tests/: api_ergonomics.rs  artifact_golden.rs  authoring_examples.rs  cli_e2e.rs  constants_api.rs  constants_integration.rs  context_solver.rs  diagnostics.rs  families.rs  family_docs_links.rs  linting.rs  registry_validation.rs  solver_smoke.rs  typed_generated.rs
crates/tf-cea/: Cargo.toml  README.md
crates/tf-cea-sys/: Cargo.toml  README.md  build.rs
crates/tf-cea-sys/src/: lib.rs
crates/tf-cea/examples/: native_smoke.rs  smoke.rs  validate_species.rs
crates/tf-cea/src/: adapter.rs  backend.rs  config.rs  error.rs  factory.rs  lib.rs  model.rs  native.rs
crates/tf-cea/tests/: native_backend.rs  process_backend.rs
crates/tf-workbook/: Cargo.toml
crates/tf-workbook/src/: lib.rs
crates/tf-workbook/tests/: example_workbooks.rs
(+187 files in other folders)
