[package]
name = "eng-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
uom.workspace = true
serde = { workspace = true, optional = true }
eng-qty-macros.workspace = true
eng-unit-expr.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
serde = ["dep:serde", "uom/serde"]
