[package]
name = "eng-pyext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "engpy_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
eng.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py37"] }
