[package]
name = "tf-cea"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tf-cea-sys = { path = "../tf-cea-sys" }

[dev-dependencies]
tempfile = "3"
