[package]
name = "tf-workbook"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
petgraph = { workspace = true }
tf-eng = { workspace = true }
eng-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
